syntax = "proto3";

package battle;

service BattleService {
  rpc GetBattleResult(BattleRequest) returns (BattleResponse) {}
}

message BattleRequest {
  int32 id1 = 1;
  int32 id2 = 2;
}

message BattleResponse {
  int32 winnerId = 1;
}
